--- a/_includes/blog_feed.html
+++ b/_includes/blog_feed.html
@@ -65,8 +65,20 @@
 </div><!-- /.blog-post -->
 
 <nav class="blog-pagination">
-  <a class="btn btn-outline-primary" href="#">Older</a>
-  <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
+  <!-- Pagination links -->
+  {% if paginator.previous_page %}
+    <a class="btn btn-outline-primary" href="{{ paginator.previous_page_path }}">Older</a>
+  {% else %}
+    <span class="btn btn-outline-primary">Older</span>
+  {% endif %}
+  <span class="page_number ">
+    Page: {{ paginator.page }} of {{ paginator.total_pages }}
+  </span>
+  {% if paginator.next_page %}
+    <a class="btn btn-outline-secondary" href="{{ paginator.next_page_path }}">Newer</a>
+  {% else %}
+    <span class="btn btn-outline-secondary disabled">Newer</span>
+  {% endif %}
 </nav>
 
 </div>
