changed footer to white

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="blog-footer">
+<footer class="blog-footer bg-white">
   <p>Made with <i class="fas fa-heart text-danger"></i> by Option Legacy Trader <a href="https://twitter.com/jball5">@jball5</a>.</p>
   <p>
     <a href="#">Back to top</a>
