--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
       <main role="main" class="container">
       <div class="row">
       <div class="col-md-8 blog-main">
+        {% if post.image %}
+          <img src="{{ post.image }}" class="lightbox" alt="">
+        {% endif%}
         {{ content }}
       </div>
         {% include sidebar.html %}
