added image to template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
       <main role="main" class="container">
       <div class="row">
       <div class="col-md-8 blog-main">
-        {% if post.image %}
-          <img src="{{ post.image }}" class="lightbox" alt="">
+        {% if page.image %}
+          <img src="{{ page.image }}" class="lightbox" alt="">
         {% endif%}
         {{ content }}
       </div>
