--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
       <div class="row">
       <div class="col-md-8 blog-main">
         {% if page.image %}
-          <img src="{{ page.image }}" class="lightbox" alt="">
+          <div class="lightbox">
+            <img src="{{ page.image }}" alt="">
+          </div>
         {% endif%}
         {{ content }}
       </div>
