--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,6 @@
       </main>
     </div>
   {% include footer.html %}
-  {% include lightbox.html %}
+  <!-- {% include lightbox.html %} -->
   </body>
 </html>
