--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,6 @@
       {{ content }}
     </div>
   {% include footer.html %}
-  <!-- {% include lightbox.html %} -->
+  {% include lightbox.html %}
   </body>
 </html>
