--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
       <main role="main" class="container">
       <div class="row">
       <div class="col-md-8 blog-main">
-        <div class="img" style="margin-left: auto; margin-right: auto;">
+        <div class="img" style="display: block; margin-bottom: 10px; margin-left: auto; margin-right: auto;">
           {% if page.image %}
             <img class="lightbox-image" src="{{ page.image }}">
           {% endif%}
