--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       <div class="col-md-8 blog-main">
         <div class="img" style="display: block; margin-bottom: 10px; margin-left: auto; margin-right: auto;">
           {% if page.image %}
-            <img class="lightbox-image" src="{{ page.image }}">
+            <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}"></a> 
           {% endif%}
         </div>
         {{ content }}
