--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
       <main role="main" class="container">
       <div class="row">
       <div class="col-md-8 blog-main">
-        <div class="img" style="display: block; margin-bottom: 10px; margin-left: auto; margin-right: auto;">
+        <div class="img align-middle" style="margin-bottom: 15px;">
           {% if page.image %}
-            <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}"></a> 
+            <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}"></a>
           {% endif%}
         </div>
         {{ content }}
