--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
       <main role="main" class="container">
       <div class="row">
       <div class="col-md-8 blog-main">
-        <div class="justify-content-center" style="margin-bottom: 15px;">
+        <div class="row justify-content-center" style="margin-bottom: 15px;">
           {% if page.image %}
             <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}"></a>
           {% endif%}
