--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       <div class="col-md-8 blog-main">
         <div class="row justify-content-center" style="margin-bottom: 15px;">
           {% if page.image %}
-            <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}" style="width: auto;"></a>
+            <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}" class="img-fluid rounded"></a>
           {% endif%}
         </div>
         {{ content }}
