adding author to post layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
           {% endif%}
         </div>
         {{ content }}
+        {% include author_snippet.html %}
       </div>
         {% include sidebar.html %}
       </div>
