--- a/_includes/author_snippet.html
+++ b/_includes/author_snippet.html
@@ -1,5 +1,15 @@
-<div class="row justify-content-left" style="margin-top: 20px;">
-  {% if page.author %}
-    <a href="{{ page.author.image }}" class="no-lightbox"><img src="{{ page.author.image }}" class="img-thumbnail rounded"></a>
-  {% endif%}
+<div class="row justify-content-left" style="margin-top: 15%; margin-bottom: 10%;">
+  <div class="col-3">
+    {% if page.author == "Tim Key" %}
+      {% assign author = (site.authors | last) %}
+      <img src="{{ author.image }}" class="img-fluid rounded" style="width: 150px; height: auto;">
+    {% endif %}
+  </div>
+  <div class="col-9">
+    <h4 class"text-dark">{{ author.name }}</h4>
+    {{ author.title }}<br/>
+    {{ author.company }}<br/>
+    <span class="text-black-50 font-weight-lighter font-italic">{{ author.content }}</span>
+  </div>
+
 </div>
