--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
       <div class="col-md-8 blog-main">
         <div class="row justify-content-center" style="margin-bottom: 20px;">
           {% if page.image %}
-            <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}" class="img-fluid rounded"></a>
+            <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}" class="img-fluid rounded shadow"></a>
           {% endif%}
         </div>
         {{ content }}
