--- a/_includes/author_snippet.html
+++ b/_includes/author_snippet.html
@@ -3,6 +3,9 @@
     {% if page.author == "Tim Key" %}
       {% assign author = (site.authors | last) %}
       <img src="{{ author.image }}" class="img-fluid rounded" style="width: 150px; height: auto;">
+    {% else %}
+      {% assign author = (site.authors | first) %}
+      <img src="{{ author.image }}" class="img-fluid rounded" style="width: 150px; height: auto;">
     {% endif %}
   </div>
   <div class="col-9">
@@ -11,5 +14,4 @@
     {{ author.company }}<br/>
     <span class="text-black-50 font-weight-lighter font-italic">{{ author.content }}</span>
   </div>
-
 </div>
