added twitter to jesse

--- a/_includes/author_snippet.html
+++ b/_includes/author_snippet.html
@@ -16,5 +16,8 @@
     {% if author.facebook %}
       <a href="https://www.facebook.com/{{author.facebook}}/" target="_blank"><i class="fab fa-facebook fa-2x text-black-50"></i></a>
     {% endif %}
+    {% if author.twitter %}
+      <a href="https://www.twitter.com/{{author.twitter}}/" target="_blank"><i class="fab fa-twitter fa-2x text-black-50"></i></a>
+    {% endif %}
   </div>
 </div>
