--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -15,7 +15,7 @@ const search = instantsearch({
 search.addWidget(
   instantsearch.widgets.searchBox({
     container: '#search-searchbar',
-    placeholder: 'Search into posts...',
+    placeholder: 'Search',
     poweredBy: true // This is required if you're on the free Community plan
   })
 );
