--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,10 +11,12 @@
           <li class="nav-item"><a class="nav-link text-primary" href="{{ item.url }}">{{ item.title }}</a></li>
        {% endfor %}
       </ul>
-      <form class="form-inline">
+      <!-- <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="border-color: #007bff87;">
         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      </form> -->
+      <div id="search-searchbar"></div>
+      <div id="search-hits"></div>
     </div>
   </div>
 </nav>
