--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,12 +11,32 @@
           <li class="nav-item"><a class="nav-link text-primary" href="{{ item.url }}">{{ item.title }}</a></li>
        {% endfor %}
       </ul>
-      <!-- <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="border-color: #007bff87;">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-      </form> -->
-      <div id="search-searchbar"></div>
-      <div id="search-hits"></div>
+      <!-- Search Modal -->
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-white" data-toggle="modal" data-target="#ModalCenter">
+        <i class="fas fa-search fa-2x text-primary"></i>
+      </button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="ModalCenterTitle">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Some text goes here</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </nav>
