--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,38 +5,16 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarToggler">
-      <a class="navbar-brand text-primary" href="#">{{ site.title }}</a>
+      <a class="navbar-brand text-primary" href="/index">{{ site.title }}</a>
       <ul class="navbar-nav ml-auto mt-2 mt-lg-1">
        {% for item in site.data.menus.navigation %}
           <li class="nav-item"><a class="nav-link text-primary" href="{{ item.url }}">{{ item.title }}</a></li>
        {% endfor %}
       </ul>
-      <!-- Search Modal -->
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-white" data-toggle="modal" data-target="#ModalCenter">
+      <!-- Search button -->
+      <button type="button" class="btn btn-white" data-toggle="modal" data-target="#largeModal">
         <i class="fas fa-search fa-2x text-primary"></i>
       </button>
-
-      <!-- Modal -->
-      <div class="modal fade" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="ModalCenterTitle">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>Some text goes here</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </nav>
