--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
     </div>
   {% include footer.html %}
   {% include lightbox.html %}
-  <!-- {% include algolia.html %} -->
   </body>
+  {% include modal.html %}
+  {% include algolia.html %}
 </html>
