--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,7 @@
     </div>
   {% include footer.html %}
   {% include lightbox.html %}
-  <!-- {% include algolia.html %} -->
   </body>
+  {% include modal.html %}
+  {% include algolia.html %}
 </html>
