changed search to extend full width

--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <!-- <h4 class="modal-title" id="myModalLabel">Large Modal</h4> -->
-        <div id="search-searchbar"></div>
+        <div id="search-searchbar" class="ais-search-box"></div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
