--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,26 @@
       <main role="main" class="container">
       <div class="row">
       <div class="col-md-8 blog-main">
+        <div class="row justify-content-between">
+          <h2 class="font-italic">{{ page.title }}</h2>
+          <small>{{ page.date | date: "%-m/%-d/%Y" }}</small>
+        </div>
         <div class="row justify-content-center" style="margin-bottom: 20px;">
           {% if page.image %}
             <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}" class="img-fluid rounded shadow"></a>
           {% endif%}
         </div>
-        {{ content }}
+        <div class="row">
+          <div class="col-2">
+            <small class="text-primary">Categories</small>
+            {% for category in page.categories %}
+              <p class="text-success">{{ category }}</p>
+            {% endfor %}
+          </div>
+          <div class="col-10">
+            {{ content }}
+          </div>
+        </div>
         {% include author_snippet.html %}
       </div>
         {% include sidebar.html %}
