--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,9 @@
         </div>
         <div class="row">
           <div class="col-2">
-            <small class="text-primary">Categories</small>
+            {% if page.title != "Blog" %}
+              <small class="text-primary">Categories</small>
+            {% endif %}
             {% for category in page.categories %}
               <p class="text-success">{{ category }}</p>
             {% endfor %}
