--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,16 +19,16 @@
             <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}" class="img-fluid rounded shadow"></a>
           {% endif%}
         </div>
-        <div class="row">
-          <div class="col-2">
+        <div class="d-flex align-content-start flex-wrap">
+          <div class="flex-row">
             {% if page.title != "Blog" %}
-              <small class="text-primary">Categories</small>
+              <small class="text-primary">Categories: </small>
             {% endif %}
             {% for category in page.categories %}
-              <p class="text-success">{{ category }}</p>
+              <span class="text-success">{{ category | sort_natural }}</span>
             {% endfor %}
           </div>
-          <div class="col-10">
+          <div class="d-flex row">
             {{ content }}
           </div>
         </div>
