--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           {% endif%}
         </div>
         <div class="d-flex align-content-start flex-wrap">
-          <div class="flex-row">
+          <div class="flex-row pb-2">
             {% if page.title != "Blog" %}
               <small class="text-primary">Categories: </small>
             {% endif %}
