--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,7 @@
         </div>
         <div class="d-flex align-content-start flex-wrap">
           <div class="flex-row pb-2">
-            {% if page.title != "Blog" %}
-              <small class="text-primary">Categories: </small>
-            {% endif %}
-            {% for category in page.categories %}
-              <span class="text-success">{{ category | sort_natural }}</span>
-            {% endfor %}
+            <span class="text-info">{{ page.categories | sort_natural | join: ", " }}</span>
           </div>
           <div class="d-flex row">
             {{ content }}
