--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,10 @@
           <small>{{ page.date | date_to_string: "ordinal", "US" }}</small>
         </div>
         <div class="row justify-content-center" style="margin-bottom: 20px;">
-          {% if page.image %}
+          {% if page.image contains 'cloudinary' %}
             <a href="{{ page.image }}" class="lightbox-image"><img src="{{ page.image }}" class="img-fluid rounded shadow"></a>
+          {% elsif page.youtubeurl contains 'youtube' %}
+            <span class="col-md-12 mt-1 pl-1">{% youtube page.youtubeurl %}</span>
           {% endif%}
         </div>
         <div class="d-flex align-content-start flex-wrap">
