--- a/_includes/mini_author_snippet.html
+++ b/_includes/mini_author_snippet.html
@@ -1,11 +1,25 @@
-<div class="d-flex justify-content-end">
-  {% if post.author == "Tim Key" %}
-    {% assign author = (site.authors | last) %}
-    <h6 class="pr-2 mt-2">{{ author.name }}</h6>
-    <img src="{{ author.image }}" class="img-fluid rounded" style="width: 38px; height: 38px;">
-  {% elsif post.author == "Jesse Ball" %}
-    {% assign author = (site.authors | first) %}
-    <h6 class="pr-2 mt-2">{{ author.name }}</h6>
-    <img src="{{ author.image }}" class="img-fluid rounded" style="width: 38px; height: 38px;">
-  {% endif %}
-</div>
+{% if page.title == "Blog" %}
+  <div class="d-flex justify-content-end">
+    {% if post.author == "Tim Key" %}
+      {% assign author = (site.authors | last) %}
+      <h6 class="pr-2 mt-2">{{ author.name }}</h6>
+      <img src="{{ author.image }}" class="img-fluid rounded" style="width: 38px; height: 38px;">
+    {% elsif post.author == "Jesse Ball" %}
+      {% assign author = (site.authors | first) %}
+      <h6 class="pr-2 mt-2">{{ author.name }}</h6>
+      <img src="{{ author.image }}" class="img-fluid rounded" style="width: 38px; height: 38px;">
+    {% endif %}
+  </div>
+{% else %}
+  <div class="d-flex justify-content-end">
+    {% if page.author == "Tim Key" %}
+      {% assign author = (site.authors | last) %}
+      <h6 class="pr-2 mt-2">{{ author.name }}</h6>
+      <img src="{{ author.image }}" class="img-fluid rounded" style="width: 38px; height: 38px;">
+    {% elsif page.author == "Jesse Ball" %}
+      {% assign author = (site.authors | first) %}
+      <h6 class="pr-2 mt-2">{{ author.name }}</h6>
+      <img src="{{ author.image }}" class="img-fluid rounded" style="width: 38px; height: 38px;">
+    {% endif %}
+  </div>&nbsp;
+{% endif %}
