blog post responsiveness

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,10 @@
       <div class="col-md-8 blog-main">
         <div class="d-flex justify-content-between">
           <h2 class="font-italic">{{ page.title }}</h2>
-          <h6 class="font-weight-bold">{{ page.date | date_to_string: "ordinal", "US" }}</h6>
+          <h6 class="font-weight-bold d-none d-md-block">{{ page.date | date_to_string: "ordinal", "US" }}</h6>
+        </div>
+        <div class="d-flex justify-content-center">
+          <h6 class="font-weight-bold d-block d-sm-block d-md-none mt-2">{{ page.date | date_to_string: "ordinal", "US" }}</h6>
         </div>
         {% include mini_author_snippet.html %}
         <div class="row justify-content-center" style="margin-bottom: 20px;">
