right alight navbar items.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,20 +2,20 @@
   <!-- Navbar content container -->
   <div class="container">
     <a class="navbar-brand text-primary" href="/index">{{ site.title }}</a>
-    <div class="collapse navbar-collapse" id="navbarToggler">
-      <ul class="navbar-nav ml-auto mt-2 mt-lg-1">
-       {% for item in site.data.menus.navigation %}
-          <li class="nav-item"><a class="nav-link text-primary" href="{{ item.url }}">{{ item.title }}</a></li>
-       {% endfor %}
-      </ul>
-      <!-- Search button -->
-      <button type="button" class="btn btn-white" data-toggle="modal" data-target="#largeModal">
-        <i class="fas fa-search fa-1x text-primary"></i>
-      </button>
-    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <div class="collapse navbar-collapse" id="navbarToggler">
+      <ul class="navbar-nav ml-auto mt-2 mt-lg-1">
+       {% for item in site.data.menus.navigation %}
+          <li class="nav-item"><a class="nav-link text-primary" style="float: right !important;" href="{{ item.url }}">{{ item.title }}</a></li>
+       {% endfor %}
+      </ul>
+      <!-- Search button -->
+      <button type="button" class="btn btn-white" style="float: right !important;" data-toggle="modal" data-target="#largeModal">
+        <i class="fas fa-search fa-1x text-primary"></i>
+      </button>
+    </div>
   </div>
 </nav>
 <div>
