--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,11 @@
-<div class="jumbotron p-3 p-md-5 text-white rounded bg-primary">
+{% for tag in site.tags %}
+  {% for post in tag %}
+    {{ post.title }}
+  {% endfor %}
+{% endfor %}
+<div class="jumbotron jumbotron-fluid p-3 p-md-5 text-white rounded bg-primary" style="background-img: url('')">
   <div class="col-md-6 px-0">
-    <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
+    <h1 class="display-4 font-italic">Words</h1>
     <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
     <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
   </div>
