--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,12 @@
-<div class="jumbotron jumbotron-fluid p-3 p-md-5 text-white rounded bg-primary" style="background-img: url('')">
-  <div class="col-md-6 px-0">
-    <h1 class="display-4 font-italic">Words</h1>
-    <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-    <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
-  </div>
-</div>
+{% assign m-featured = site.tags | map: "main-featured" %}
+{% for featured in m-featured %}
+  {% for post in featured %}
+    <div class="jumbotron jumbotron-fluid p-3 p-md-5 text-white rounded bg-primary" style="background-image: url("{{ post.image }}"); background-size: cover;">
+      <div class="col-md-6 px-0">
+        <h1 class="display-4 font-italic">{{ post.title }}</h1>
+        <p class="lead my-3">{{ post.excerpt | strip_html | strip_newlines | truncate: 150 }}</p>
+        <p class="lead mb-0"><a href="{{ post.url }}" class="text-white font-weight-bold">Continue reading...</a></p>
+      </div>
+    </div>
+  {% endfor %}
+{% endfor %}
