--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 {% assign m-featured = site.tags | map: "main-featured" %}
 {% for featured in m-featured %}
   {% for post in featured %}
-    <div class="jumbotron jumbotron-fluid p-3 p-md-5 text-light rounded bg-primary border border-light" style="background-image: url({{ post.image | replace: "c_fit", "b_rgb:810a8a,e_blur:400,o_25" }}); background-size: cover;">
+    <div class="jumbotron jumbotron-fluid p-3 p-md-5 text-light rounded bg-primary border border-light" style="background-image: url({{ post.image | replace: "c_fit", "b_rgb:782f88,e_blur:400,o_25" }}); background-size: cover;">
       <div class="col-md-6 px-0">
         <h1 class="display-4 font-italic">{{ post.title }}</h1>
         <p class="lead my-3">{{ post.excerpt | strip_html | strip_newlines | truncate: 150 }}</p>
