--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -79,7 +79,7 @@ $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $theme-colors: map-merge(
   (
-    "primary":    #782F88,
+    "primary":    $primary,
     "secondary":  $secondary,
     "success":    $success,
     "info":       $info,
