--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm rounded">
   <!-- Navbar content container -->
   <div class="container">
-    <a class="navbar-brand text-primary" href="/index">{{ site.title }}</a>
+    <a class="navbar-brand text-dark" href="/index">{{ site.title }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-1">
        {% for item in site.data.menus.navigation %}
-          <li class="nav-item"><a class="nav-link text-primary" style="float: right !important;" href="{{ item.url }}">{{ item.title }}</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" style="float: right !important;" href="{{ item.url }}">{{ item.title }}</a></li>
        {% endfor %}
       </ul>
       <!-- Search button -->
       <button type="button" class="btn btn-white" style="float: right !important;" data-toggle="modal" data-target="#largeModal">
-        <i class="fas fa-search fa-1x text-primary"></i>
+        <i class="fas fa-search fa-1x text-dark"></i>
       </button>
     </div>
   </div>
