--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
         </div>
         <div class="d-flex align-content-start flex-wrap">
           <div class="d-flex row">
+            {% include category_snippet.html %}
             {{ content }}
           </div>
-          <h6 class="text-info font-italic mt-2">{{ page.categories | sort_natural | join: ", " | downcase }}</h6>
         </div>
         {% include author_snippet.html %}
       </div>
