--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
       <div class="row">
       <div class="col-md-8 blog-main">
         <div class="d-flex justify-content-between">
-          <h2 class="font-italic">{{ page.title }}</h2>
-          <h6 class="blog-post-meta d-none d-md-block">{{ page.date | date_to_string: "ordinal", "US" }}</h6>
+          <h3 class="text-dark">{{ page.title }}</h3>
+          <p class="text-muted d-none d-md-block">{{ page.date | date_to_string: "ordinal", "US" }}</p>
         </div>
         <div class="d-flex justify-content-center">
-          <h6 class="blog-post-meta d-block d-sm-block d-md-none mt-2">{{ page.date | date_to_string: "ordinal", "US" }}</h6>
+          <p class="text-muted d-block d-sm-block d-md-none mt-2">{{ page.date | date_to_string: "ordinal", "US" }}</p>
         </div>
         {% include mini_author_snippet.html %}
         <div class="row justify-content-center" style="margin-bottom: 20px;">
