--- a/_includes/category_snippet.html
+++ b/_includes/category_snippet.html
@@ -1,3 +1,3 @@
 <div class="d-flex-inline pb-2">
-  <p class="text-dark mt-1">{{ page.categories | sort_natural | join: "  |  " | downcase }}</p>
+  <p class="text-muted mt-1">{{ page.categories | sort_natural | join: "  |  " | downcase }}</p>
 </div>
