--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="blog-footer bg-white container">
-  <p>Made with <i class="fas fa-heart text-danger"></i> by Option Legacy Trader & Developer <a href="https://twitter.com/jball5">@jball5</a>.</p>
+  <p>Made with <i class="fas fa-heart text-danger"></i> by OptionLegacy.com Trader & Developer <a href="https://twitter.com/jball5">@jball5</a>.</p>
   <p>
     <a href="#">Back to top</a>
   </p>
