--- a/_includes/category_snippet.html
+++ b/_includes/category_snippet.html
@@ -1,3 +1,3 @@
-<div class="d-flex-inline pb-2">
-  <p class="text-muted mt-1">{{ page.categories | sort_natural | join: "  |  " | downcase }}</p>
+<div class="d-flex-inline pb-1">
+  <strong class="text-success mt-1">{{ page.categories | sort_natural | join: "  |  " | downcase }}</strong>
 </div>
