--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -1,30 +1,40 @@
-<div class="row mb-2">
-<div class="col-md-6">
-  <div class="card flex-md-row mb-4 shadow-sm h-md-250">
-    <div class="card-body d-flex flex-column align-items-start">
-      <strong class="d-inline-block mb-2 text-success">World</strong>
-      <h3 class="mb-0">
-        <a class="text-dark" href="#">Featured post</a>
-      </h3>
-      <div class="mb-1 text-muted">Nov 12</div>
-      <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-      <a href="#">Continue reading</a>
+{% assign l-featured = site.tags | map: "left-featured" %}
+{% for featured in l-featured %}
+  {% for post in featured limit:1 %}
+    <div class="row mb-2">
+    <div class="col-md-6">
+      <div class="card flex-md-row mb-4 shadow-sm h-md-250">
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-success">{{ post.categories | sort_natural | join: "  |  " | downcase }}</strong>
+          <h3 class="mb-0">
+            <a class="text-dark" href="#">Featured post</a>
+          </h3>
+          <div class="mb-1 text-muted">Nov 12</div>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#">Continue reading</a>
+        </div>
+        {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="Thumbnail" %}
+      </div>
     </div>
-    {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="Thumbnail" %}
-  </div>
-</div>
-<div class="col-md-6">
-  <div class="card flex-md-row mb-4 shadow-sm h-md-250">
-    <div class="card-body d-flex flex-column align-items-start">
-      <strong class="d-inline-block mb-2 text-success">Design</strong>
-      <h3 class="mb-0">
-        <a class="text-dark" href="#">Post title</a>
-      </h3>
-      <div class="mb-1 text-muted">Nov 11</div>
-      <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-      <a href="#">Continue reading</a>
+  {% endfor %}
+{% endfor %}
+{% assign r-featured = site.tags | map: "right-featured" %}
+{% for featured in r-featured %}
+  {% for post in featured %}
+    <div class="col-md-6">
+      <div class="card flex-md-row mb-4 shadow-sm h-md-250">
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-success">Design</strong>
+          <h3 class="mb-0">
+            <a class="text-dark" href="#">Post title</a>
+          </h3>
+          <div class="mb-1 text-muted">Nov 11</div>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#">Continue reading</a>
+        </div>
+        {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="Thumbnail" %}
+      </div>
     </div>
-    {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="Thumbnail" %}
-  </div>
-</div>
-</div>
+    </div>
+  {% endfor %}
+{% endfor %}
