--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -7,32 +7,40 @@
         <div class="card-body d-flex flex-column align-items-start">
           <strong class="d-inline-block mb-2 text-success">{{ post.categories | sort_natural | join: "  |  " | downcase }}</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="#">Featured post</a>
+            <a class="text-dark" href="{{ post.url }}">{{ post.title }}</a>
           </h3>
-          <div class="mb-1 text-muted">Nov 12</div>
-          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#">Continue reading</a>
+          <div class="mb-1 text-muted">{{ post.date | date_to_string: "ordinal", "US" }}</div>
+          <p class="card-text mb-auto">{{ post.excerpt | strip_html | strip_newlines | truncate: 90 }}</p>
+          <a href="{{ post.url }}">Continue reading</a>
         </div>
-        {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="Thumbnail" %}
+        {% if post.image != empty string %}
+          <img src="{{ post.image | replace: "c_fit", "c_fill,g_center,h_250,w_200" }}" height="250" alt="" class="card-img-right flex-auto d-none d-lg-block">
+        {% else %}
+          {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="" %}
+        {% endif %}
       </div>
     </div>
   {% endfor %}
 {% endfor %}
 {% assign r-featured = site.tags | map: "right-featured" %}
 {% for featured in r-featured %}
-  {% for post in featured %}
+  {% for post in featured limit:1 %}
     <div class="col-md-6">
       <div class="card flex-md-row mb-4 shadow-sm h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
-          <strong class="d-inline-block mb-2 text-success">Design</strong>
+          <strong class="d-inline-block mb-2 text-success">{{ post.categories | sort_natural | join: "  |  " | downcase }}</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="#">Post title</a>
+            <a class="text-dark" href="{{ post.url }}">{{ post.title }}</a>
           </h3>
-          <div class="mb-1 text-muted">Nov 11</div>
-          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#">Continue reading</a>
+          <div class="mb-1 text-muted">{{ post.date | date_to_string: "ordinal", "US" }}</div>
+          <p class="card-text mb-auto">{{ post.excerpt | strip_html | strip_newlines | truncate: 90 }}</p>
+          <a href="{{ post.url }}">Continue reading</a>
         </div>
-        {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="Thumbnail" %}
+        {% if post.image != empty string %}
+          <img src="{{ post.image | replace: "c_fit", "c_fill,g_center,h_250,w_200" }}" alt="" height="250" class="card-img-right img-fluid flex-auto d-none d-lg-block">
+        {% else %}
+          {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="Thumbnail" %}
+        {% endif %}
       </div>
     </div>
     </div>
