--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -14,7 +14,7 @@
           <a href="{{ post.url }}">Continue reading</a>
         </div>
         {% if post.image != empty string %}
-          <img src="{{ post.image | replace: "c_fit", "c_fill,g_center,h_250,w_200" }}" height="250" alt="" class="card-img-right flex-auto d-none d-lg-block">
+          <img src="{{ post.image | replace: "c_fit", "c_fill,g_center,h_250,w_200" }}" height="250" alt="" class="card-img-right flex-auto d-none d-xl-block">
         {% else %}
           {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="" %}
         {% endif %}
@@ -37,7 +37,7 @@
           <a href="{{ post.url }}">Continue reading</a>
         </div>
         {% if post.image != empty string %}
-          <img src="{{ post.image | replace: "c_fit", "c_fill,g_center,h_250,w_200" }}" alt="" height="250" class="card-img-right img-fluid flex-auto d-none d-lg-block">
+          <img src="{{ post.image | replace: "c_fit", "c_fill,g_center,h_250,w_200" }}" alt="" height="250" class="card-img-right img-fluid flex-auto d-none d-xl-block">
         {% else %}
           {% include icons/placeholder.svg width="200" height="250" background="#55595c" color="#eceeef" class="card-img-right flex-auto d-none d-lg-block" text="Thumbnail" %}
         {% endif %}
