--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,10 +1,37 @@
-<h1>Archives of posts from {{ page.date | date: "%B %Y" }}</h1>
-
-<ul class="posts">
-{% for post in page.posts %}
-  <li>
-    <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-  </li>
-{% endfor %}
-</ul>
+<!doctype html>
+<html lang="en">
+  {% include head.html %}
+  <body>
+    {% include navigation.html %}
+    <div class="container">
+      <main role="main" class="container">
+      <div class="row">
+      <div class="col-md-8 blog-main">
+        <div class="d-flex justify-content-between">
+          <h1>Archive of posts from {{ page.date | date: "%B %Y" }}</h1>
+          {% assign posts = site.posts %}
+          {% assign month = page.date | date: "%m" %}
+          <ul class="posts">
+          {% for post in posts %}
+          {% assign postmonth = post.date | date: "%m" %}
+          {% if month == postmonth %}
+            <li>
+              <span class="post-date">Published: {{ post.date | date: "%b %d, %Y" }}</span>
+              <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+            </li>
+          {% endif %}
+          {% endfor %}
+          </ul>
+        </div>
+        {{ content }}
+      </div>
+        {% include sidebar.html %}
+      </div>
+      </main>
+    </div>
+  {% include footer.html %}
+  {% include lightbox.html %}
+  </body>
+  {% include modal.html %}
+  {% include algolia.html %}
+</html>
