added missing quote.

--- a/_includes/blog_feed.html
+++ b/_includes/blog_feed.html
@@ -5,7 +5,7 @@
   Latest posts
 </h3>
 {% for post in paginator.posts %}
-  <div class=card flex-md-row" style="border: 0px;">
+  <div class="card flex-md-row" style="border: 0px;">
     <div class="row no-gutters pb-3 pt-2">
       {% if post.image %}
         <div class="col-md-3 d-none d-lg-block">
