--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -15,7 +15,7 @@
           {% for post in posts %}
           {% assign postmonth = post.date | date: "%m" %}
             {% if month == postmonth %}
-              <div class=card flex-md-row" style="border: 0px;">
+              <div class="card flex-md-row" style="border: 0px;">
                 <div class="row no-gutters pb-3 pt-2">
                   {% if post.image %}
                     <div class="col-md-3 d-none d-lg-block">
