--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white shadow-sm rounded">
   <!-- Navbar content container -->
   <div class="container">
-    <a class="navbar-brand text-dark" href="/index">{{ site.title }}</a>
+    <a href="/index"><img src="https://res.cloudinary.com/dznhn4oax/image/upload/c_fit,h_40/v1550539760/ol_steps.png" alt="{{ site.title }}" class="mr-1"></a>
+    <a class="navbar-brand text-dark d-none d-md-block" href="/index">{{ site.title }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
