--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
   <!-- Navbar content container -->
   <div class="container">
     <a href="/index"><img src="https://res.cloudinary.com/dznhn4oax/image/upload/c_fit,h_40/v1550539760/ol_steps.png" alt="{{ site.title }}" class="mr-1"></a>
-    <a class="navbar-brand text-dark d-none d-md-block" href="/index">{{ site.title }}</a>
+    <a class="navbar-brand text-body d-none d-md-block" href="/index">{{ site.title }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
