--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,11 +20,11 @@
   </div>
 
   <div class="p-3">
-    <h4 class="font-italic">Elsewhere</h4>
+    <!-- <h4 class="font-italic">Elsewhere</h4> <!-- Placeholder
     <ol class="list-unstyled">
       <li><a href="#">GitHub</a></li>
       <li><a href="#">Twitter</a></li>
       <li><a href="#">Facebook</a></li>
-    </ol>
+    </ol> -->
   </div>
 </aside>
