--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -31,6 +31,7 @@
                   </div>
                 </div>
               </div>
+              <div class="mb-3 border-bottom"></div>
             {% endif %}
           {% endfor %}
         {{ content }}
