responsive pagination buttons

--- a/_includes/blog_feed.html
+++ b/_includes/blog_feed.html
@@ -24,7 +24,7 @@
   <div class="border-bottom"></div><!-- /.blog-post -->
 {% endfor %}
 
-<nav class="blog-pagination mt-5">
+<nav class="blog-pagination mt-5 d-flex justify-content-center justify-content-md-start">
   <!-- Pagination links -->
   {% if paginator.previous_page %}
     <a class="btn btn-outline-primary" href="{{ paginator.previous_page_path }}#latest">Newer</a>
