--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -7,7 +7,7 @@
         <div class="card-body d-flex flex-column align-items-start">
           <strong class="d-inline-block mb-2 text-ol-teal">{{ post.categories | sort_natural | join: "  |  " | downcase }}</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="{{ post.url }}">{{ post.title }}</a>
+            <a class="text-dark text-decoration-none" href="{{ post.url }}">{{ post.title }}</a>
           </h3>
           <div class="mb-1 text-muted">{{ post.date | date_to_string: "ordinal", "US" }}</div>
           <p class="card-text mb-auto">{{ post.excerpt | strip_html | strip_newlines | truncate: 90 }}</p>
@@ -30,7 +30,7 @@
         <div class="card-body d-flex flex-column align-items-start">
           <strong class="d-inline-block mb-2 text-ol-teal">{{ post.categories | sort_natural | join: "  |  " | downcase }}</strong>
           <h3 class="mb-0">
-            <a class="text-dark" href="{{ post.url }}">{{ post.title }}</a>
+            <a class="text-dark text-decoration-none" href="{{ post.url }}">{{ post.title }}</a>
           </h3>
           <div class="mb-1 text-muted">{{ post.date | date_to_string: "ordinal", "US" }}</div>
           <p class="card-text mb-auto">{{ post.excerpt | strip_html | strip_newlines | truncate: 90 }}</p>
