--- a/_includes/blog_feed.html
+++ b/_includes/blog_feed.html
@@ -33,7 +33,7 @@
       <span class="btn btn-outline-primary">Newer</span>
     {% endif %}
     {% if paginator.total_pages > 1 %}
-      <span class="page_number ">
+      <span class="page_number p-2">
         Page: {{ paginator.page }} of {{ paginator.total_pages }}
       </span>
     {% endif %}
