implemented cache plugin to layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
 ---
 <!doctype html>
 <html lang="en">
-  {% include head.html %}
+  {% include_cached head.html %}
   <body>
-    {% include navigation.html %}
+    {% include_cached navigation.html %}
     <div class="container">
       <main role="main" class="container">
       <div class="row">
@@ -33,13 +33,13 @@
         </div>
         {% include author_snippet.html %}
       </div>
-        {% include sidebar.html %}
+        {% include_cached sidebar.html %}
       </div>
       </main>
     </div>
-  {% include footer.html %}
-  {% include lightbox.html %}
+  {% include_cached footer.html %}
+  {% include_cached lightbox.html %}
   </body>
-  {% include modal.html %}
-  {% include algolia.html %}
+  {% include_cached modal.html %}
+  {% include_cached algolia.html %}
 </html>
