adding super-search

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,7 @@
     </div>
   {% include_cached footer.html %}
   {% include_cached lightbox.html %}
+  {% include_cached super-search.html %}
   </body>
   {% include_cached modal.html %}
   {% include_cached algolia.html %}
