swapped search with rss search button

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,9 +13,11 @@
        {% endfor %}
       </ul>
       <!-- Search button -->
-      <button type="button" class="btn btn-white" style="float: right !important;" data-toggle="modal" data-target="#largeModal">
-        <i class="fas fa-search fa-1x text-dark"></i>
-      </button>
+      <div class="super-search" id="js-super-search">
+      	<a href="javascript:void(0)" onclick="superSearch.toggle()" class="super-search__close-btn">X</a>
+      	<input type="text" placeholder="Type here to search" class="super-search__input" id="js-super-search__input">
+      	<ul class="super-search__results" id="js-super-search__results"></ul>
+      </div>
     </div>
   </div>
 </nav>
