correcte js source

--- a/_includes/super-search.html
+++ b/_includes/super-search.html
@@ -1,4 +1,4 @@
-<script src="super-search.js"></script>
+<script src="/assets/js/super-search.js"></script>
 <script>superSearch({
 // Change to your own rss feed file path
 // searchFile: '//kushagragour.in/feed/rss.xml'
