--- a/_includes/super-search.html
+++ b/_includes/super-search.html
@@ -2,5 +2,5 @@
 <script>superSearch({
 // Change to your own rss feed file path
 // searchFile: '//kushagragour.in/feed/rss.xml'
-searchFile: '//localhost:4000/feed.xml'
+searchFile: '/feed.xml'
 });</script>
